--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: 'Raleway', sans-serif;
-   max-width: 70%;
-    min-width: 50%;
+
     margin: auto;
 
 }
@@ -10,10 +9,28 @@ h1, h2, h3, h4 {
     text-align: center;
 }
 
-.container{
-    display: flex;
-    flex-wrap: wrap;
+@media screen and (max-width: 900px) {
+    body{
+        display: block;
+        max-width: inherit;
+        margin: auto;
+        padding: 10%;
+    }
 }
+
+
+@media screen and (min-width: 901px) {
+    body{
+        max-width: 900px;
+    }
+    .container{
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+
+
 .myImage{
     width: 33%;
 }
