--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,19 @@ h1, h2, h3, h4 {
 
 @media screen and (max-width: 900px) {
     body{
-        display: block;
+
         max-width: inherit;
         margin: auto;
         padding: 10%;
+    }
+
+    img {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .text{
+        padding: 5%;
     }
 }
 
@@ -27,15 +36,16 @@ h1, h2, h3, h4 {
         display: flex;
         flex-wrap: wrap;
     }
+    .myImage{
+        width: 33%;
+    }
+    .text{
+        width: 66%;
 }
 
 
 
-.myImage{
-    width: 33%;
-}
-.text{
-    width: 66%;
+
 
 }
 .innerText{
@@ -69,14 +79,14 @@ section:nth-child(odd){
 
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical
 }
 
 /* Style the submit button with a specific background color etc */
