Added Media Queries

--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,16 @@ body{
     font-family: 'Raleway', sans-serif;
 
     margin: auto;
+    text-align: justify;
+    text-justify: inter-word;
 
 }
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
     text-align: center;
+}
+p{
+    padding-right: 5%;
 }
 
 @media screen and (max-width: 900px) {
@@ -51,7 +56,7 @@ h1, h2, h3, h4 {
 .innerText{
     padding: 3%;
 }
-#passport, #university, #work, #courses, #certificate, #contactImage {
+#passport, #university, #work, #courses, #certificate,#skill, #contactImage {
     padding: 5%;
 }
 
